--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -20,7 +20,7 @@
     position: relative;
 }
 
-.h-profile button {
+.h-profile>.btn {
     width: 50px; /* Adjust width */
     height: 50px; /* Adjust height */
     border-radius: 50%; 
