--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -7,7 +7,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 1300px;
   z-index: 2;
   border-bottom: 1px solid #ede7e7;
 }
