--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -219,6 +219,119 @@
     padding: 0;
     display: block;
 }
+/* Full-screen Image Viewer Modal */
+.image-viewer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.full-screen-image {
+    max-width: 90%;
+    max-height: 90vh;
+}
+
+.arrow-left, .arrow-right {
+    position: absolute;
+    top: 50%;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 48px;
+    cursor: pointer;
+}
+
+.arrow-left {
+    left: 20px;
+}
+
+.arrow-right {
+    right: 20px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: none;
+    border: none;
+    color: grey;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+ 
+  /* Left and Right Arrows */
+  .arrow-left,
+  .arrow-right {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: grey;
+    border: none;
+    padding: 15px;
+    cursor: pointer;
+    font-size: 40px;
+    border-radius: 50%;
+  }
+  
+  .arrow-left {
+    left: 20px;
+  }
+  
+  .arrow-right {
+    right: 20px;
+  }
+  
+  
+  .pro-info-container{
+    text-align: center;
+    background-color: #000;
+    color: white;
+    padding: 50px 50px;
+    height: auto;
+}
+
+.pro-like-blue>.pro-button{
+    width: 75px;
+    height: 75px;
+    color: white;
+    font-size: 20px;
+    background-color: #0057ff;
+    border: 1px solid #0057ff;
+    border-radius: 50%;
+}
+
+.pro-like-blue>.pro-button:hover{
+    background-color: #003db8;
+}
+
+.pro-like-blue>.pro-like-heading{
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+
+.pro-stats>.pro-button{
+    background-color: transparent;
+    color: #939594;
+    border: none;
+    padding: 10px 0;
+    margin-left: 20px;
+}
+
+.pro-publish{
+    color: #939594;
+    margin-top: 24px;
+}
+
+  
 
 /* Responsive styling for max-width 1020px */
 @media (max-width: 1020px) {
