--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -224,8 +224,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: black;
     display: flex;
     align-items: center;
@@ -234,8 +234,8 @@
 }
 
 .full-screen-image {
-    max-width: 90%;
-    max-height: 90vh;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 .arrow-left, .arrow-right {
@@ -243,7 +243,7 @@
     top: 50%;
     background: none;
     border: none;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 48px;
     cursor: pointer;
 }
@@ -256,15 +256,27 @@
     right: 20px;
 }
 
+.arrow-left:hover {
+    color: white;
+}
+
+.arrow-right:hover {
+    color: white;
+}
+
 .close-btn {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 5px;
+    right: 25px;
     background: none;
     border: none;
-    color: grey;
-    font-size: 30px;
+    color: rgb(70, 70, 70);
+    font-size: 25px;
     cursor: pointer;
+}
+
+.close-btn:hover{
+    color: white;
 }
 
  
