--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -32,6 +32,10 @@
   text-align: center;
   color: black;
 }
+.nav-item:hover {
+  text-decoration: underline;
+  color:#4c74ed;
+}
 
 .dropdown-content,
 .freelancer-dropdown {
