--- a/src/styles/SignIn.css
+++ b/src/styles/SignIn.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
 .sign-in-container {
   display: flex;
   justify-content: space-evenly;
@@ -6,6 +11,7 @@
   background-image: url("https://www.lensrentals.com/blog/media/2018/09/Lensrentals_Longnecker-8-1024x682.jpg");
   background-size: cover;
   margin-top: 80px;
+  flex-wrap: wrap;
 }
 
 .sign-in-box {
@@ -24,7 +30,6 @@
 }
 
 .signin-left {
-  /* background-color: red; */
   height: 200px;
   width: 200px;
   margin-top: 60px;
@@ -100,4 +105,74 @@
   display: block;
   color: #007bff;
   font-size: 14px;
+}
+
+@media only screen and (max-width: 768px) {
+  .sign-in-container {
+      flex-direction: column;
+      height: auto;
+      padding: 20px;
+  }
+
+  .sign-in-box {
+      width: 90%;
+      height: auto;
+      margin: auto;
+  }
+
+  .signin-left {
+      height: 150px;
+      width: 150px;
+      margin-top: 30px;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  .sign-in-container {
+      padding: 40px;
+  }
+
+  .sign-in-box {
+      width: 70%;
+      height: auto;
+  }
+
+  .signin-left {
+      height: 180px;
+      width: 180px;
+      margin-top: 40px;
+  }
+
+  .sign-in-box h2 {
+      font-size: 22px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .sign-in-box h2 {
+      font-size: 20px;
+  }
+
+  .input-field, .continue-btn, .social-btn {
+      font-size: 14px;
+  }
+
+  .or-separator {
+      font-size: 12px;
+  }
+
+  .help-link {
+      font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .signin-left {
+      height: 100px;
+      width: 100px;
+  }
+
+  .sign-in-box {
+      padding: 20px;
+  }
 }
