--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -12,7 +12,7 @@
   height:110%;
 }
 
-.new_job_btn {
+/* .new_job_btn {
   width: 100%;
   padding: 10px;
   background-color: #0073e6;
@@ -22,7 +22,7 @@
   font-size: 16px;
   cursor: pointer;
   margin-bottom: 20px;
-}
+} */
 
  .categories {
   margin-bottom: 20px;
