--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,29 @@
 
-.app-container {
+/* .app-container {
     display: flex;
     flex-direction: column;
     height: 100vh;
-  }
+  } */
   
-  .content-container {
-    display: flex;
-    flex-grow: 1;
-  }
+
   
-  .sidepanel {
+  
+  .sidebar {
     width: 250px;
     padding: 20px;
     background-color: white;
     border-right: 1px solid #eaeaea;
   }
   
-  .main-content {
+  .main_content {
     flex-grow: 1;
     padding: 20px;
     background-color: #f9f9f9;
   }
   
-  .job-listings {
+  /* .job_listings {
     flex-grow: 1;
     padding: 20px;
     background-color: white;
-  }
+  } */
   
