--- a/src/styles/JobList.css
+++ b/src/styles/JobList.css
@@ -1,25 +1,38 @@
+/* .job_listings {
+  padding: 20px;
+  flex-grow: 1;
+  background-color: white;
+  width: 100%; 
+  overflow-x: hidden;
+  margin-left: 250px;
+  margin-top: 0;
+} */
 .job_listings {
   padding: 20px;
   flex-grow: 1;
   background-color: white;
-  width: 100%; /* Adjust width to be responsive */
-  /* Limit to a max size */
-  overflow-x: hidden;
+  width: 80%;
+  overflow-y: auto; /* Enable vertical scrolling */
+  /* Fit within the viewport */
+ /* position: absolute; */
+  position: relative;
+  top: 0;
 }
+
+
 
 .job_listings_header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-  margin-left: 60px;
+  margin-left: 32px;
   color: rgb(89, 86, 86);
 }
 
 .job_search input {
   padding: 10px;
   width: 300px;
-  margin-right: 90px;
   border: 1px solid #eaeaea;
   font-size: 16px;
   background-color: #f6f0f0;
@@ -28,13 +41,11 @@
 
 .job_cards {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: 50px;
   color: rgb(15, 15, 15);
-  margin-left: 60px;
-  
-  
-
+  margin-left: 32px;
 }
 
 .job_card {
