--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,30 +1,18 @@
 .sidepanel {
-  width: 250px;
+  width: 250px; /* Give the sidebar a fixed width or use percentage based on layout */
   padding: 20px;
   background-color: white;
   border-right: 1px solid #eaeaea;
   position: sticky;
-  overflow-x: hidden;
-  /* left:0; */
-  top:0;
-  bottom:1;
-  /* right:0; */
-  height:110%;
+  top: 0; /* Stick to the top of the viewport */
+  height: 100vh; /* Ensure it fills the height of the viewport */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  flex-shrink: 0; /* Ensure it doesn't shrink when the container resizes */
 }
 
-/* .new_job_btn {
-  width: 100%;
-  padding: 10px;
-  background-color: #0073e6;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-  margin-bottom: 20px;
-} */
 
  .categories {
+  margin-top: 20px;
   margin-bottom: 20px;
 }
   
@@ -104,13 +92,9 @@
   transition: background-color 0.3s; /* Smooth transition */
 }
 
-.new_job_btn:hover {
-  background-color: #FC5C7D; /* Button hover color */
-}
-
-.categories {
-  margin-top: 20px; /* Space above categories */
-}
+/* .new_job_btn:hover {
+  background-color: #FC5C7D; 
+} */
 
 .category_option {
   display: flex; /* Flex display for alignment */
