--- a/src/App.css
+++ b/src/App.css
@@ -26,4 +26,8 @@
     padding: 20px;
     background-color: white;
   } */
-  
+  @media (max-width: 768px) {
+    .main_container {
+      flex-direction: column; /* Stack items on smaller screens */
+    }
+  }
