--- a/src/styles/SignIn.css
+++ b/src/styles/SignIn.css
@@ -8,7 +8,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   height: 100vh;
-  background-image: url("https://www.lensrentals.com/blog/media/2018/09/Lensrentals_Longnecker-8-1024x682.jpg");
+  background-image: url(../assets/bridge.jpg);
   background-size: cover;
   margin-top: 80px;
   flex-wrap: wrap;
